# CMakeList.txt : CMake project for Assignment08, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Assignment08 "Assignment08.cpp" "Assignment08.h")

# TODO: Add tests and install targets if needed.
